# alfarobi_neo_ws

./: .gitignore
src/alfarobi_controller/: CMakeLists.txt  package.xml
src/alfarobi_controller/config/: initial_pose.yaml  link_length_alfarobi.yaml  pose_body.yaml  stable_walk_param.yaml
src/alfarobi_controller/include/alfarobi_controller/dynamics/: StableWalk.h
src/alfarobi_controller/include/alfarobi_controller/kinematics/: BodyPose.h  PosePlayer.h
src/alfarobi_controller/src/: controller_main.cpp
src/alfarobi_controller/src/alfarobi_controller/dynamics/: StableWalk.cpp
src/alfarobi_controller/src/alfarobi_controller/kinematics/: BodyPose.cpp  PosePlayer.cpp
src/alfarobi_debug/: CMakeLists.txt  package.xml
src/alfarobi_debug/src/: plotter_test.cpp
src/alfarobi_interface/: CMakeLists.txt  package.xml
src/alfarobi_lib/: CMakeLists.txt  package.xml
src/alfarobi_lib/include/alfarobi_lib/Math/: Function.h  LinearAlgebra.h  Plotter.h
src/alfarobi_lib/msg/: JointCurrentVal.msg  JointTargetVal.msg  JointVal.msg
src/alfarobi_lib/src/alfarobi_lib/: LinearAlgebra.cpp  Plotter.cpp
src/alfarobi_main/: CMakeLists.txt  package.xml
src/alfarobi_main/config/: robot_information.yaml  simulation_settings.yaml
src/alfarobi_main/src/simulation/: pybullet_sim.py  pybullet_simulation.py
src/alfarobi_main/src/simulation/pybullet_controller/: pybullet_controller.py
src/alfarobi_main/src/simulation/robot_description/urdf/: robotis_op3.urdf
src/alfarobi_vision/: CMakeLists.txt  package.xml
