<?xml version="1.0"?>
<package format="2">
  <name>alfarobi_debug</name>
  <version>0.0.0</version>
  <description>The alfarobi_debug package</description>
  <author email="jane.doe@example.com">Jane Doe</author>
  <maintainer email="dhonan@todo.todo">dhonan</maintainer>
  <license>Alfarobi GMRT UGM</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>alfarobi_lib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>alfarobi_lib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>alfarobi_lib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export></export>
</package>